# Baize

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: board.rs  evaluation.rs  lib.rs  main.rs  search.rs  time.rs  uci.rs
src/board/: fen.rs  makemove.rs  movegen.rs  tests.rs  zobrist.rs
src/search/: tt.rs
src/tools/: mod.rs  perft.rs
src/types/: bitboard.rs  castling.rs  chess_move.rs  color.rs  mod.rs  piece.rs  square.rs
